--- a/JD/jdindex.html
+++ b/JD/jdindex.html
@@ -1208,27 +1208,27 @@
 
                             <li class="middle-content dw">
                                 <a href="">
-                                    <ul class="clearfix">
+                                    <ul class="clearfix middle-content-ul ">
                                         <li>
                                             <div class="left cleafix" id="left">
                                                 <div class="info">
                                                     <h4>新品首发</h4>
-                                                    <p>小米新品发布1dghsfd1</p>
+                                                    <p>小米新品发布</p>
                                                 </div>
                                             </div>
                                             <div class="right" id="right">
-                                                <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5749/100/2352436616/19776/4fd05235/592fea32Na5008213.jpg!q90" alt="">
+                                                <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5797/82/1715912711/22172/914864e/5928fa5dN52ded415.jpg!q90" alt="">
                                             </div>
                                         </li>
                                         <li>
                                             <div class="left cleafix" id="left">
-                                                <div class="info">
-                                                    <h4>新品ww首发</h4>
-                                                    <p>小米新品发布1dghsfd1</p>
+                                                <div class="info" id="info">
+                                                    <h4>新品首发</h4>
+                                                    <p>小米新品发布</p>
                                                 </div>
                                             </div>
                                             <div class="right" id="right">
-                                                <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5749/100/2352436616/19776/4fd05235/592fea32Na5008213.jpg!q90" alt="">
+                                                <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5680/96/1085577896/9029/a321aa55/5923a8ddNb46ffe0b.jpg!q90" alt="">
                                             </div>
                                         </li>
                                     </ul>
@@ -1255,7 +1255,179 @@
             </div>
         </div>
         <div class="middlect-c-2">
+            <div class="middlebox">
+                <div class="middlect-sm clearfix">
+                    <div class="middlect-c-1 clearfix">
+                        <div class="title">
+                            <h3>享品质</h3>
+                        </div>
+                        <div class="clearfix ">
+                            <ul class="middle-c-ul clearfix">
+                                <li class="middle-content dw">
+                                    <a href="">
+                                        <div class="left cleafix">
+                                            <div class="info">
+                                                <h4>新品首发</h4>
+                                                <p>小米新品发布</p>
+                                            </div>
+                                        </div>
+                                        <div class="right">
+                                            <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5749/100/2352436616/19776/4fd05235/592fea32Na5008213.jpg!q90" alt="">
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="middle-content dw">
+                                    <a href="">
+                                        <div class="left cleafix">
+                                            <div class="info">
+                                                <h4>新品首发</h4>
+                                                <p>小米新品发布</p>
+                                            </div>
+                                        </div>
+                                        <div class="right">
+                                            <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5623/79/1940829523/41029/ba70399/592b05ecNe7671fb7.jpg!q90" alt="">
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="middle-content dw Carousel" index="3" id="ct-2-middle-first">
 
+                                    <div class="carousel ">
+                                        <ul class="carousel ct-img">
+                                            <li index='0'>
+                                                <a href=""><img src="https://img20.360buyimg.com/da/jfs/t4015/251/1638697890/78514/96c6e177/5885d746Na914ed00.jpg" alt=""></a>
+                                            </li>
+                                            <li index='1'>
+                                                <a href=""><img src="https://img13.360buyimg.com/da/jfs/t5836/72/1604278059/88641/a4ec25f8/5927f8f4N49c85a6b.jpg" alt=""></a>
+                                            </li>
+                                            <li index='2'>
+                                                <a href=""><img src="https://img12.360buyimg.com/da/jfs/t5830/240/1016866313/204252/2ae59e94/59233770N2aefb948.jpg" alt=""></a>
+                                            </li>
+                                            <li index='3'>
+                                                <a href=""><img src="https://img13.360buyimg.com/da/jfs/t5836/72/1604278059/88641/a4ec25f8/5927f8f4N49c85a6b.jpg" alt=""></a>
+                                            </li>
+                                            <li index='4'>
+                                                <a href=""><img src="https://img11.360buyimg.com/da/jfs/t4132/196/1340121366/224199/40dcb547/58c0b20eNc964116b.jpg" alt=""></a>
+                                            </li>
+                                        </ul>
+
+                                        <a class="btn btn-pre" href="">&lt;</a>
+                                        <a class="btn btn-next" id="btn-next" href="">&gt;</a>
+                                        <ul class="bullet">
+                                            <li id="active" index="0"></li>
+                                            <li index="1"></li>
+                                            <li index="2"></li>
+                                            <li index="3"></li>
+                                            <li index="4"></li>
+                                        </ul>
+                                    </div>
+
+                                </li>
+                                <li class="middle-content dw">
+                                    <a href="">
+                                        <div class="left cleafix">
+                                            <div class="info">
+                                                <h4>新品首发</h4>
+                                                <p>小米新品发布</p>
+                                            </div>
+                                        </div>
+                                        <div class="right">
+                                            <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5818/290/1684081062/48818/bf37d5fd/592935aaNf9c009fe.jpg!q90" alt="">
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="middle-content dw">
+                                    <a href="">
+                                        <div class="left cleafix">
+                                            <div class="info">
+                                                <h4>新品首发</h4>
+                                                <p>小米新品发布</p>
+                                            </div>
+                                        </div>
+                                        <div class="right">
+                                            <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5749/100/2352436616/19776/4fd05235/592fea32Na5008213.jpg!q90" alt="">
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="middle-content dw" index="6">
+                                    <a href="">
+
+                                    </a>
+                                </li>
+                                <li class="middle-content dw">
+                                    <a href="">
+                                        <div class="left cleafix">
+                                            <div class="info">
+                                                <h4>新品首发</h4>
+                                                <p>小米新品发布</p>
+                                            </div>
+                                        </div>
+                                        <div class="right">
+                                            <img src="https://m.360buyimg.com/babel/s800x340_jfs/t6031/255/909171949/55209/f766749f/592e3193Nd62486d2.jpg!q90" alt="">
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="middle-content dw">
+                                    <a href="">
+                                        <div class="left cleafix">
+                                            <div class="info">
+                                                <h4>新品首发</h4>
+                                                <p>小米新品发布</p>
+                                            </div>
+                                        </div>
+                                        <div class="right">
+                                            <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5749/100/2352436616/19776/4fd05235/592fea32Na5008213.jpg!q90" alt="">
+                                        </div>
+                                    </a>
+                                </li>
+
+                                <li class="middle-content dw">
+                                    <a href="">
+                                        <ul class="clearfix middle-content-ul ">
+                                            <li>
+                                                <div class="left cleafix" id="left">
+                                                    <div class="info">
+                                                        <h4>新品首发</h4>
+                                                        <p>小米新品发布</p>
+                                                    </div>
+                                                </div>
+                                                <div class="right" id="right">
+                                                    <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5797/82/1715912711/22172/914864e/5928fa5dN52ded415.jpg!q90" alt="">
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="left cleafix" id="left">
+                                                    <div class="info" id="info">
+                                                        <h4>新品首发</h4>
+                                                        <p>小米新品发布</p>
+                                                    </div>
+                                                </div>
+                                                <div class="right" id="right">
+                                                    <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5680/96/1085577896/9029/a321aa55/5923a8ddNb46ffe0b.jpg!q90" alt="">
+                                                </div>
+                                            </li>
+                                        </ul>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="middlect-bg">
+                    <div class="middlect-bg-content clearfix ">
+                        <ul class="clearfix">
+                            <li>
+                                <a href=""><img src="http://img30.360buyimg.com/da/jfs/t6085/300/297548590/12893/a1100a66/5927a622N9442302b.jpg!q90" alt=""></a>
+                            </li>
+                            <li>
+                                <a href=""><img src="http://img1.360buyimg.com/da/jfs/t5956/114/1047837360/8973/b9067b3e/592e9e9bNf2afc038.jpg!q90" alt=""></a>
+                            </li>
+                            <li>
+                                <a href=""><img src="http://img14.360buyimg.com/da/jfs/t5755/145/1477003736/5508/8b7850dc/592789e4Nad6e7ebb.jpg!q90" alt=""></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="middlect-c-3">
 
