--- a/JD/jdindex.html
+++ b/JD/jdindex.html
@@ -8,8 +8,8 @@
     <!--<title><img src="" alt="">JD</title>-->
     <title>京东(JD.COM)-正品低价、品质保障、配送及时、轻松购物！</title>
     <link rel="stylesheet" type="text/css" href="./index.css">
-    <link rel="stylesheet" type="text/css" href="./middle.css">
-    <script src="http://at.alicdn.com/t/font_y32vax5028svpldi.js"></script>
+    <!--<link rel="stylesheet" type="text/css" href="./middle.css">-->
+    <script src="http://at.alicdn.com/t/font_79p2c8uvbau7hkt9.js"></script>
     <link rel="icon" href="https://www.jd.com/favicon.ico" mce_href="//www.jd.com/favicon.ico" type="image/x-icon">
 </head>
 
@@ -21,7 +21,7 @@
             <div class="searcha" id="fixed-searcha" href="">
                 <input class="searchicon" id="fixed-searchicon" type="file" accept="image/png,image/jpeg,image/jpg">
             </div>
-            <div id="fixed-searchc" class="searchc"><img src="./img/搜索_搜索.png" alt=""></div>
+            <div id="fixed-searchc" class="searchc"><img src="http://i1.piimg.com/519918/18a2e4020b4920f5.png" alt=""></div>
         </div>
     </div>
     <div class="bigct clearfix">
@@ -267,7 +267,6 @@
                             <li><span>手机京东</span></li>
                         </a>
                         </ul>
-
                 </nav>
 
                 <div class="ct-s">
@@ -275,10 +274,10 @@
                         <img src="https://img13.360buyimg.com/da/jfs/t5647/152/1340462641/104562/c2d0bd79/59256b96Nb4620ed1.gif" alt="">
                     </div>
                     <div class="search"><input class="searchi" type="search" name="" value="" placeholder="飞科剃须刀"></div>
-                    <div class="searcha" href="">
+                    <div class="searcha">
                         <input class="searchicon" type="file" accept="image/png,image/jpeg,image/jpg">
                     </div>
-                    <div class="searchc"><img src="./img/搜索_搜索.png" alt=""></div>
+                    <div class="searchc"><img src="http://i1.piimg.com/519918/18a2e4020b4920f5.png" alt=""></div>
                     <div class="buycar">
                         <div class="buycar-show">
                             <svg class="icon" aria-hidden="true">
@@ -591,8 +590,8 @@
                 <a href=""><span id="timeout-lowPrice">总有你想不到的低价&gt</span></a>
                 <p> 当前场次</p>
                 <div class="timeout-show">
-                    <b class="timeout-show-first"></b>
-                    <b class="timeout-show-second"></b>
+                    <b class="timeout-show-first"></b><svg class="icon" aria-hidden="true"><use xlink:href="#icon-weibiaoti9-copy"></use></svg>
+                    <b class="timeout-show-second"></b><svg class="icon" aria-hidden="true"><use xlink:href="#icon-weibiaoti9-copy"></use></svg>
                     <b class="timeout-show-third"></b>
 
                 </div>
@@ -1093,7 +1092,7 @@
                 <!--<a href=" ">
                   <li><span ><svg cass="icon " aria-hidden="true "><use xlink:href="#icon-xin "></use></svg></li>
                 </a>-->
-                <a href="" class=GoTop "">
+                <a href="" class="GoTop">
                     <li><span><svg class="icon" aria-hidden="true"><use xlink:href="#icon-dingbu"></use></svg></span></li>
                     <b>回到顶部</b>
 
